změny č.1 v base a obou jidelnickach

--- a/jidelnicek/templates/index.html
+++ b/jidelnicek/templates/index.html
@@ -24,7 +24,7 @@
 					<hr class="my-4">
 					<p class="paragraf1a2">Pojďte si s námi vytvořit jídelníček a nákupní seznam na příští týden a máte o starost méně!</p>
 					<br>
-					<a class="btn btn-success generuj" href="#" role="button">Generuj recepty!</a>
+					<a href="jidelnicek.html" class="btn btn-success generuj" href="#" role="button">Co bude k obědu?</a>
 				</div>
 
 				<!-- <a href="index.html"><img src="cooking.jpg" alt="" class="pozadi">></a>//-->
