--- a/jidelnicek/templates/base.html
+++ b/jidelnicek/templates/base.html
@@ -8,18 +8,52 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title>Page Title</title>
+	<title>JÍDELNÍČEK</title>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 	<script src="main.js"></script>
+
+	<link rel="stylesheet" href="static/style.css" />
+
+	<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet"> 
+
 </head>
 <body>
-	<h1> Base file, tj. stejny template pro vice stranek</h1>
+	<!-- <h1> Base file, tj. stejny template pro vice stranek</h1>//-->
+	
+	<div class="Album">
+			<div class="jumbotron zarovnani pozadi">
+					
+					<h1 class="display-4 nadpis">Vygenerujte si recepty dle Vašeho přání!</h1>
+					<p class="lead paragraf1a2">Vyfiltrujte si kategorii receptů, ze kterých chcete mít sestavený jídelníček.</p>
+					<hr class="my-4">
+					<p class="paragraf1a2">Až si vyberete, zda byste rádi recepty na hlavní jídlo, nebo raději dezerty, stiskněte Generuj recepty - a pak už jen stačí uvařit a nechat si chutnat!</p>
+					
+					<div class="input-group">
+							<select class="custom-select" id="inputGroupSelect04" aria-label="Example select with b	<option selected>Choose...</option>
+							utton addon">
+								<option value="1">One</option>
+								<option value="2">Two</option>
+								<option value="3">Three</option>
+							</select>
+							<div class="input-group-append">
+								<button class="btn btn-outline-secondary" type="button">Button</button>
+							</div>
+					</div>
+				<br>
+				<a class="btn btn-success generuj" href="#" role="button">Generuj recepty!</a>
+				</div>
+	
+	</div>
+
+</body>
+</html>
 
 	{% block content %}
 
 	{% endblock %}
 
-</body>
-</html>
+
+
+	<!-- v base.html pises NAD {% block content %} - tzn. ze nastavis jeden template pro vsechny stranky......v jidelnicek a jidelnicek2 budes psat MEZI {% block content %} a {% endblock %} tim mu reknes, jidelnicek.html vezmi to co je v base.html + pridej k tomu obsah mezi {block content}//-->
