--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -1,6 +1,19 @@
 {% extends "base.html " %}
+
 {% block content %}
 
 <h2>Návod, jak pracovat s jídelníčkem + u6 vygenerovana tabulka</h2>
+
+<!--Vygeneruje seznam receptu-->
+<h3>Tady je seznam 5 receptu</h3>
+<div>
+	<ul>
+
+		{% for rec in recept %}
+		<li>{{rec}}</li>
+		{% endfor %}
+
+	</ul>
+</div>
 
 {% endblock %}
