--- a/jidelnicek/templates/jidelnicek.html
+++ b/jidelnicek/templates/jidelnicek.html
@@ -1,8 +1,26 @@
-{% extends "base.html " %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<h2>Návod, jak pracovat s jídelníčkem, bez vypsane tabulky</h2>
-<!-- tady by mělo být jen to co není v base a ta base k tomu, ale nevím, jestli teda base potřebujeme, protože ten template mam vlastně tady a to by mohlo stačit//-->
+	<title>JÍDELNÍČEK</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	<script src="main.js"></script>
+
+	<link rel="stylesheet" href="/static/style.css" />
+
+	<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet"> 
+
+</head>
+<body>
+
+
 <div class="Album">
 	<div class="jumbotron zarovnani pozadi">
 			
@@ -28,7 +46,7 @@
 
 </div>
 
+
 </body>
 </html>
 
-{% endblock %}
