--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -1,8 +1,23 @@
-{% extends "base.html " %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+		<title>JÍDELNÍČEK</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-{% block content %}
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<h2>Návod, jak pracovat s jídelníčkem + u6 vygenerovana tabulka</h2>
+
+		<link rel="stylesheet" href="/static/style.css" />
+
+		<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet"> 
+
+	</head>
+<body>
+
+<h2>Návod, jak pracovat s jídelníčkem + uz vygenerovana tabulka</h2>
 <!-- tabulky nahoře má být recept, pak ingredience a pod tim go to recept na webu a mají být vedle sebe což nevim jak udělam a stejně to nevypadá jako tabulka viz zde, jak to má vypadat:http://getbootstrap.com/docs/4.1/components/card/ -->
 <div class="card" style="width: 18rem;">
 		<img class="card-img-top" src=".../100px180/" alt="Card image cap">
@@ -27,11 +42,12 @@
 <div>
 	<ul>
 
-		{% for rec in recept %}
+		<!--{% for rec in recept %}
 		<li>{{rec}}</li>
-		{% endfor %}
+		{% endfor %}-->
 
 	</ul>
 </div>
 
-{% endblock %}
+</body>
+</html>
