databaze v komentech, tak nefunguje

--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -41,11 +41,10 @@
 <h3>Tady je seznam 5 receptu</h3>
 <div>
 	<ul>
-
-		<!--{% for rec in recept %}
+<!--
+		{% for rec in recept %}
 		<li>{{rec}}</li>
-		{% endfor %}-->
-
+		{% endfor %}  -->
 	</ul>
 </div>
 
