změny v nazvu button a počtu karet s recepty na jidelnicek2

--- a/jidelnicek/templates/jidelnicek.html
+++ b/jidelnicek/templates/jidelnicek.html
@@ -37,7 +37,7 @@
 						<option value="3">Three</option>
 					</select>
 					<div class="input-group-append">
-						<button class="btn btn-outline-secondary" type="button">Button</button>
+						<button class="btn btn-outline-secondary" type="button">Filter receptů</button>
 					</div>
 			</div>
 		<br>
