--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -17,36 +17,92 @@
 	</head>
 <body>
 
-<h2>Návod, jak pracovat s jídelníčkem + uz vygenerovana tabulka</h2>
+<!--<h2>Návod, jak pracovat s jídelníčkem + uz vygenerovana tabulka</h2>-->
 <!-- tabulky nahoře má být recept, pak ingredience a pod tim go to recept na webu a mají být vedle sebe což nevim jak udělam a stejně to nevypadá jako tabulka viz zde, jak to má vypadat:http://getbootstrap.com/docs/4.1/components/card/ -->
+
+<div class="jumbotron zarovnani pozadi">
+	
+	<h1 class="display-4 nadpis">Vygenerujte si recepty dle Vašeho přání!</h1>
+	<p class="lead paragraf1a2">Vyfiltrujte si kategorii receptů, ze kterých chcete mít sestavený jídelníček.</p>
+	<hr class="my-4">
+	<p class="paragraf1a2">Až si vyberete, zda byste rádi recepty na hlavní jídlo, nebo raději dezerty, stiskněte Generuj recepty - a pak už jen stačí uvařit a nechat si chutnat!</p>
+	
+	<div class="input-group">
+			<select class="custom-select" id="inputGroupSelect04" aria-label="Example select with b	<option selected>Choose...</option>
+			utton addon">
+				<option value="1">One</option>
+				<option value="2">Two</option>
+				<option value="3">Three</option>
+			</select>
+			<div class="input-group-append">
+				<button class="btn btn-outline-secondary" type="button">Filter receptů</button>
+			</div>
+	</div>
+<br>
+<a href="jidelnicek2.html" class="btn btn-success generuj" href="#" role="button">Generuj recepty!</a>
+</div>
+
+<!--Vygeneruje seznam receptu - v image bude foto receptu, pod tím název, pod tím potřebné ingredience a pod tím odkaz přes tlačítko na web fitrecepty a tam je recept-->
+
 <div class="card" style="width: 18rem;">
 		<img class="card-img-top" src=".../100px180/" alt="Card image cap">
 		<div class="card-body">
-			<h5 class="card-title">Card title</h5>
-			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			<a href="#" class="btn btn-primary">Go somewhere</a>
+			<h5 class="card-title">Název receptu</h5>
+			<p class="card-text">Budete potřebovat:</p>
+			<a href="#" class="btn btn-primary">Recept zde</a>
 		</div>
 	</div>
 
 	<div class="card" style="width: 18rem;">
 			<img class="card-img-top" src=".../100px180/" alt="Card image cap">
 			<div class="card-body">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				<a href="#" class="btn btn-primary">Go somewhere</a>
+				<h5 class="card-title">Název receptu</h5>
+				<p class="card-text">Budete potřebovat:</p>
+				<a href="#" class="btn btn-primary">Recept zde</a>
+			</div>
+		</div>
+
+	<div class="card" style="width: 18rem;">
+			<img class="card-img-top" src=".../100px180/" alt="Card image cap">
+			<div class="card-body">
+				<h5 class="card-title">Název receptu</h5>
+				<p class="card-text">Budete potřebovat:</p>
+				<a href="#" class="btn btn-primary">Recept zde</a>
+			</div>
+		</div>
+
+	<div class="card" style="width: 18rem;">
+			<img class="card-img-top" src=".../100px180/" alt="Card image cap">
+			<div class="card-body">
+				<h5 class="card-title">Název receptu</h5>
+				<p class="card-text">Budete potřebovat:</p>
+				<a href="#" class="btn btn-primary">Recept zde</a>
+			</div>
+		</div>
+
+	<div class="card" style="width: 18rem;">
+			<img class="card-img-top" src=".../100px180/" alt="Card image cap">
+			<div class="card-body">
+				<h5 class="card-title">Název receptu</h5>
+				<p class="card-text">Budete potřebovat:</p>
+				<a href="#" class="btn btn-primary">Recept zde</a>
 			</div>
 		</div>
 
 <!--Vygeneruje seznam receptu-->
-<h3>Tady je seznam 5 receptu</h3>
+<h3>Nákupní seznam</h3>
 <div>
-	<ul>
-
+	<ul class="list-group">
+			<li class="list-group-item">Jedna ingredience</li>
+			<li class="list-group-item">Druhá ingredience</li>
+			<li class="list-group-item">Třetí ingredience</li>
+			<li class="list-group-item">Čtvrtá ingredience</li>
+			<li class="list-group-item">Pátá ingredience</li>
+		</ul>
 		<!--{% for rec in recept %}
 		<li>{{rec}}</li>
 		{% endfor %}-->
 
-	</ul>
 </div>
 
 </body>
