--- a/jidelnicek/templates/index.html
+++ b/jidelnicek/templates/index.html
@@ -17,8 +17,8 @@
 			
 	<div>
 			
-			<div class="jumbotron zarovnani pozadi">
-					
+			<div class="jumbotron-fluid zarovnani pozadi">
+				<div class="container">
 					<h1 class="display-4 nadpis">JÍDELNÍČEK</h1>
 					<p class="lead paragraf1a2">Také si vždy lámete hlavu nad tím, co budete dnes vařit?</p>
 					<hr class="my-4">
@@ -26,7 +26,7 @@
 					<br>
 					<a href="jidelnicek.html" class="btn btn-success generuj" href="{{ url_for('jidelnicek') }}" role="button">Co bude k obědu?</a>
 				</div>
-
+			</div>
 				<!-- <a href="index.html"><img src="cooking.jpg" alt="" class="pozadi">></a>//-->
 
 	</body>
