--- a/jidelnicek/templates/jidelnicek.html
+++ b/jidelnicek/templates/jidelnicek.html
@@ -41,7 +41,7 @@
 					</div>
 			</div>
 		<br>
-		<a href="jidelnicek2.html" class="btn btn-success generuj" href="jidelnicek2.html" role="button">Generuj recepty!</a>
+		<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan') }}" role="button">Generuj recepty!</a>
 		</div>
 
 </div>
