--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -41,7 +41,7 @@
 			</div>
 	</div>
 <br>
-<a href="jidelnicek2.html" class="btn btn-success generuj" href="#" role="button">Generuj recepty!</a>
+<a class="btn btn-success generuj" href="#" role="button">Generuj recepty!</a>
 
 <br>
 <br>
