--- a/jidelnicek/templates/jidelnicek.html
+++ b/jidelnicek/templates/jidelnicek.html
@@ -16,15 +16,21 @@
 	<link rel="stylesheet" href="/static/style.css" />
 
 	<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet"> 
-
-</head>
-<body>
-
-
-<div class="Album">
-	<div class="jumbotron zarovnani pozadi">
+	<style>
+			h1.ex1 {
+					margin: 90px 70px 50px;
 			
-			<h1 class="display-4 nadpis">Vygenerujte si recepty dle Vašeho přání!</h1>
+			}
+			
+			</style>
+</head>
+<body background="/static/cooking.jpg" class="pozadi">
+
+
+<div class="">
+	<div class="container zarovnani">
+		
+			<h1 class="display-4 nadpis ex1">Vygenerujte si recepty dle Vašeho přání!</h1>
 			<p class="lead paragraf1a2">Vyfiltrujte si kategorii receptů, ze kterých chcete mít sestavený jídelníček.</p>
 			<hr class="my-4">
 			<p class="paragraf1a2">Až si vyberete, zda byste rádi recepty na hlavní jídlo, nebo raději dezerty, stiskněte Generuj recepty - a pak už jen stačí uvařit a nechat si chutnat!</p>
