--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -14,17 +14,24 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 
+		<style>
+		h1.ex1 {
+				margin: 90px 70px 50px;
+		
+		}
+		</style>
+
 	</head>
-<body >
+<body background="/static/cooking.jpg" class="pozadi">
 
 <!--<h2>Návod, jak pracovat s jídelníčkem + uz vygenerovana tabulka</h2>-->
 <!-- tabulky nahoře má být recept, pak ingredience a pod tim go to recept na webu a mají být vedle sebe což nevim jak udělam a stejně to nevypadá jako tabulka viz zde, jak to má vypadat:http://getbootstrap.com/docs/4.1/components/card/ -->
 
 <!--je treba roztáhnout ten obrázek v pozadí na celé-->
 
-<div class="jumbotron zarovnani pozadi">
+<div class="container zarovnani">
 
-	<h1 class="display-4 nadpis">Vygenerujte si recepty dle Vašeho přání!</h1>
+	<h1 class="display-4 nadpis ex1">Vygenerujte si recepty dle Vašeho přání!</h1>
 	<p class="lead paragraf1a2">Vyfiltrujte si kategorii receptů, ze kterých chcete mít sestavený jídelníček.</p>
 	<hr class="my-4">
 	<p class="paragraf1a2">Až si vyberete, zda byste rádi recepty na hlavní jídlo, nebo raději dezerty, stiskněte Generuj recepty - a pak už jen stačí uvařit a nechat si chutnat!</p>
