--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -167,9 +167,9 @@
 
 	</div>
 
-	<!--{% for rec in recept %}
+	{% for rec in recept %}
 	<li>{{rec}}</li>
-	{% endfor %}-->
+	{% endfor %}
 
 </div>
 
