random fce, ale zatim pro vsechny stejne

--- a/jidelnicek/templates/index.html
+++ b/jidelnicek/templates/index.html
@@ -31,7 +31,8 @@
 					<hr class="my-4">
 					<p class="paragraf1a2">Pojďte si s námi vytvořit jídelníček a nákupní seznam na příští týden a máte o starost méně!</p>
 					<br>
-					<a href="jidelnicek.html" class="btn btn-success generuj" href="{{ url_for('jidelnicek') }}" role="button">Co bude k obědu?</a>
+					<!--href prosim nemen, musi tam byt toto, jinak to nebude fungovat-->
+					<a href="{{ url_for('jidelnicek') }}"  class="btn btn-success generuj" role="button">Co bude k obědu?</a>
 				</div>
 			</div>
 				<!-- <a href="index.html"><img src="cooking.jpg" alt="" class="pozadi">></a>//-->
