--- a/jidelnicek/static/style.css
+++ b/jidelnicek/static/style.css
@@ -39,4 +39,7 @@ h1.nadpis{
 	color: black;
 	font-family: 'Mali', cursive;
 }
-
+.obrazekreceptu{
+  height: 8rem;
+}
+/*aby byla stejná velikost všech obrázků receptů v pětidenním výčtu*/
