--- a/jidelnicek/templates/jidelnicek3.html
+++ b/jidelnicek/templates/jidelnicek3.html
@@ -52,7 +52,7 @@
 <div class="row card-deck">
 
 <div class="card karta bg-light" style="width: 20rem;"> 
-	<img class="card-img-top img-fluid obrazekreceptu" src="{{ nazev1.foto }}" alt="Card image cap">
+	<img class="card-img-top img-fluid" src="{{ nazev1.foto }}" alt="Card image cap">
 	<div class="card-body">
 		<h5 class="card-title">{{ nazev1.title }}</h5>
 		<p class="card-text">Budete potřebovat:</p>
@@ -71,8 +71,8 @@
 <br>
 <br>
 
-<div class="card karta bg-light" style="width: 20rem">
-		<img class="card-img-top obrazekreceptu" src="{{ nazev2.foto }}" alt="Card image cap">
+<div class="card karta bg-light" style="width: 20rem;">
+		<img class="card-img-top" src="{{ nazev2.foto }}" alt="Card image cap">
 		<div class="card-body">
 			<h5 class="card-title">{{ nazev2.title }}</h5>
 			<p class="card-text">Budete potřebovat:</p>
@@ -86,7 +86,7 @@
 <br>
 
 <div class="card karta bg-light" style="width: 20rem;">
-		<img class="card-img-top obrazekreceptu" src="{{ nazev3.foto }}" alt="Card image cap">
+		<img class="card-img-top" src="{{ nazev3.foto }}" alt="Card image cap">
 		<div class="card-body">
 			<h5 class="card-title">{{ nazev3.title }}</h5>
 			<p class="card-text">Budete potřebovat:</p>
@@ -100,7 +100,7 @@
 <br>
 
 <div class="card karta bg-light" style="width: 20rem;">
-		<img class="card-img-top obrazekreceptu" src="{{ nazev4.foto }}" alt="Card image cap">
+		<img class="card-img-top" src="{{ nazev4.foto }}" alt="Card image cap">
 		<div class="card-body">
 			<h5 class="card-title">{{ nazev4.title }}</h5>
 			<p class="card-text">Budete potřebovat:</p>
@@ -114,7 +114,7 @@
 <br>
 
 <div class="card karta bg-light" style="width: 20rem;">
-	<img class="card-img-top obrazekreceptu" src="{{ nazev5.foto }}" alt="Card image cap">
+	<img class="card-img-top" src="{{ nazev5.foto }}" alt="Card image cap">
 	<div class="card-body">
 		<h5 class="card-title">{{ nazev5.title }}</h5>
 		<p class="card-text">Budete potřebovat:</p>
@@ -132,7 +132,7 @@
 <br>
 <div>
 
-<!--
+<!--Je zde třeba udělat proklik z předchozí stránky-->
 <div class="">
 		<h3>Nákupní seznam</h3>		
 <div class="checkbox">
@@ -158,7 +158,7 @@
 			</div>
 			<br>
 			<br>
--->
+
 			<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan_new') }}" role="button">Generuj recepty!</a>
 			<br>
 			<br>
