--- a/jidelnicek/templates/jidelnicek3.html
+++ b/jidelnicek/templates/jidelnicek3.html
@@ -52,14 +52,14 @@
 <div class="row card-deck">
 
 <div class="card karta bg-light" style="width: 20rem;"> 
-	<img class="card-img-top img-fluid" src="{{ nazev1.foto }}" alt="Card image cap">
+	<img class="card-img-top img-fluid obrazekreceptu" src="{{ nazev1.foto }}" alt="Card image cap">
 	<div class="card-body">
 		<h5 class="card-title">{{ nazev1.title }}</h5>
-		<p class="card-text">Budete potřebovat:</p>
+		<p class="card-text ingredience">Budete potřebovat:</p>
 		<!-- vypis ingredienci -->
-			<div>
-					{%  for ing in ingre %}
-						<li>{{ingre}}</li>
+			<div class="zarovnaniingredienci ingredience">
+					{%  for ing in ingre11 %}
+					<label><input type="checkbox" value="">{{ing}}</label>	
 					{% endfor %}
 			</div>
 		<a href="{{ nazev1.url }}"  target="_blank"button type="button" class="btn btn-success" >Zobrazit recept</a>
@@ -71,11 +71,16 @@
 <br>
 <br>
 
-<div class="card karta bg-light" style="width: 20rem;">
-		<img class="card-img-top" src="{{ nazev2.foto }}" alt="Card image cap">
+<div class="card karta bg-light" style="width: 20rem">
+		<img class="card-img-top obrazekreceptu" src="{{ nazev2.foto }}" alt="Card image cap">
 		<div class="card-body">
 			<h5 class="card-title">{{ nazev2.title }}</h5>
-			<p class="card-text">Budete potřebovat:</p>
+			<p class="card-text ingredience">Budete potřebovat:</p>
+			<div class="zarovnaniingredienci ingredience">
+					{%  for ing in ingre21 %}
+					<label><input type="checkbox" value="">{{ing}}</label>	
+					{% endfor %}
+			</div>
 			<a href="{{ nazev2.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
 		</div>
 	</div>
@@ -86,10 +91,15 @@
 <br>
 
 <div class="card karta bg-light" style="width: 20rem;">
-		<img class="card-img-top" src="{{ nazev3.foto }}" alt="Card image cap">
+		<img class="card-img-top obrazekreceptu" src="{{ nazev3.foto }}" alt="Card image cap">
 		<div class="card-body">
 			<h5 class="card-title">{{ nazev3.title }}</h5>
-			<p class="card-text">Budete potřebovat:</p>
+			<p class="card-text ingredience">Budete potřebovat:</p>
+			<div class="zarovnaniingredienci ingredience">
+					{%  for ing in ingre31 %}
+					<label><input type="checkbox" value="">{{ing}}</label>	
+					{% endfor %}
+			</div>
 			<a href="{{ nazev3.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
 		</div>
 	</div>
@@ -100,10 +110,15 @@
 <br>
 
 <div class="card karta bg-light" style="width: 20rem;">
-		<img class="card-img-top" src="{{ nazev4.foto }}" alt="Card image cap">
+		<img class="card-img-top obrazekreceptu" src="{{ nazev4.foto }}" alt="Card image cap">
 		<div class="card-body">
 			<h5 class="card-title">{{ nazev4.title }}</h5>
-			<p class="card-text">Budete potřebovat:</p>
+			<p class="card-text ingredience">Budete potřebovat:</p>
+			<div class="zarovnaniingredienci ingredience">
+					{%  for ing in ingre41 %}
+					<label><input type="checkbox" value="">{{ing}}</label>	
+					{% endfor %}
+			</div>
 			<a href="{{ nazev4.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
 		</div>
 	</div>
@@ -114,10 +129,15 @@
 <br>
 
 <div class="card karta bg-light" style="width: 20rem;">
-	<img class="card-img-top" src="{{ nazev5.foto }}" alt="Card image cap">
+	<img class="card-img-top obrazekreceptu" src="{{ nazev5.foto }}" alt="Card image cap">
 	<div class="card-body">
 		<h5 class="card-title">{{ nazev5.title }}</h5>
-		<p class="card-text">Budete potřebovat:</p>
+		<p class="card-text ingredience">Budete potřebovat:</p>
+		<div class="zarovnaniingredienci ingredience">
+				{%  for ing in ingre51 %}
+				<label><input type="checkbox" value="">{{ing}}</label>	
+				{% endfor %}
+		</div>
 		<a href="{{ nazev5.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
 	</div>
 </div>
@@ -132,7 +152,7 @@
 <br>
 <div>
 
-<!--Je zde třeba udělat proklik z předchozí stránky-->
+
 <div class="">
 		<h3>Nákupní seznam</h3>		
 <div class="checkbox">
@@ -158,7 +178,7 @@
 			</div>
 			<br>
 			<br>
-
+-->
 			<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan_new') }}" role="button">Generuj recepty!</a>
 			<br>
 			<br>
